gateway-api-training/code/tag10/routes-tag10.yaml
# Zusaetzliche Routen fuer die Security-Drills
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shop-admin
  namespace: shop
spec:
  parentRefs:
    - {name: web, namespace: infra}
  hostnames: [shop.apps.lab.internal]
  rules:
    - matches:
        - path: {type: PathPrefix, value: /admin}
      backendRefs:
        - {name: shop-v1, port: 80}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
  namespace: shop
spec:
  parentRefs:
    - {name: web, namespace: infra}
  hostnames: [api.apps.lab.internal]
  rules:
    - backendRefs:
        - {name: shop-v2, port: 80}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portal
  namespace: shop
spec:
  parentRefs:
    - {name: web, namespace: infra, sectionName: https}
  hostnames: [portal.apps.lab.internal]
  rules:
    - backendRefs:
        - {name: shop-v1, port: 80}
